# nav_ws

./: .gitignore  WORKLOG.md
scripts/: save_map.sh  start_mapping.sh  start_navigation.sh
src/rdk_x5_nav_assistant/: README.md  package.xml  setup.cfg  setup.py
src/rdk_x5_nav_assistant/config/: demo_routes.yaml  product_catalog.yaml  safety.yaml  store_map.yaml  vp100.yaml  ydlidar_x3.yaml
src/rdk_x5_nav_assistant/config/audio/: audio_config.json
src/rdk_x5_nav_assistant/config/audio/hrsc/: cmd_word.json
src/rdk_x5_nav_assistant/config/cartographer/: cartographer_2d.lua  cartographer_2d_localization.lua
src/rdk_x5_nav_assistant/config/nav2/: nav2_params.yaml
src/rdk_x5_nav_assistant/launch/: cartographer_localization.launch.py  cartographer_slam.launch.py  nav_assistant.launch.py  nav_bringup.launch.py  obstacle_test.launch.py  smoke_mapping.launch.py  smoke_visualization.launch.py
src/rdk_x5_nav_assistant/rdk_x5_nav_assistant/: assistant_task_node.py  audio_intent_bridge.py  catalog.py  grasp_utils.py  grasp_verification_node.py  initial_pose_tf.py  localization_bridge.py  nav_goal_bridge.py  navigation_guide_node.py  navigation_utils.py  scan_sector_filter.py  tts_player_node.py
src/rdk_x5_nav_assistant/rviz/: smoke_mapping.rviz
src/rdk_x5_nav_assistant/scripts/: save_map.sh  setup_env.sh  start_mapping.sh  start_navigation.sh
src/rdk_x5_nav_assistant/test/: test_catalog.py  test_grasp_utils.py  test_navigation_utils.py
src/ydlidar_ros2_driver/params/: ydlidar.yaml
